testdata/baselines/reference/submodule/conformance/checkJsdocTypeTag2.errors.txt
0.js(3,5): error TS2322: Type 'boolean' is not assignable to type 'String'.
0.js(6,5): error TS2322: Type 'string' is not assignable to type 'number'.
0.js(8,12): error TS2552: Cannot find name 'function'. Did you mean 'Function'?
0.js(12,12): error TS2552: Cannot find name 'function'. Did you mean 'Function'?
0.js(19,12): error TS2552: Cannot find name 'function'. Did you mean 'Function'?
0.js(23,12): error TS2552: Cannot find name 'function'. Did you mean 'Function'?


==== 0.js (6 errors) ====
    // @ts-check
    /** @type {String} */
    var S = true;
        ~
!!! error TS2322: Type 'boolean' is not assignable to type 'String'.
    
    /** @type {number} */
    var n = "hello";
        ~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    
    /** @type {function (number)} */
               ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
    const x1 = (a) => a + 1;
    x1("string");
    
    /** @type {function (number): number} */
               ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
    const x2 = (a) => a + 1;
    
    /** @type {string} */
    var a;
    a = x2(0);
    
    /** @type {function (number): number} */
               ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
    const x3 = (a) => a.concat("hi");
    x3(0);
    
    /** @type {function (number): string} */
               ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
    const x4 = (a) => a + 1;
    x4(0);